--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "autoprefixer": "^10",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.6",
+    "chartkick": "^5.0.1",
     "material-design-icons": "^3.0.1",
     "postcss": "^8",
     "swiper": "^11.1.14",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
+    "vue-chartkick": "^1.1.0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
